--- a/javascript-course/html/index.html
+++ b/javascript-course/html/index.html
@@ -22,6 +22,9 @@
         <a href wm-nav="exercicios/tagsTexto2.html">03 - Tags Texto 2</a> |
         <a href wm-nav="exercicios/listas.html">04 - Listas</a> |
         <a href wm-nav="exercicios/listasAninhadas.html">05 - Listas Aninhadas</a> |
+        <a href wm-nav="exercicios/links.html">06 - Links</a> |
+        <a href wm-nav="exercicios/links2.html">07 - Links 2</a> |
+        <a href wm-nav="exercicios/tabela.html">08 - Tabelas</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
