--- a/javascript-course/html/index.html
+++ b/javascript-course/html/index.html
@@ -25,6 +25,7 @@
         <a href wm-nav="exercicios/links.html">06 - Links</a> |
         <a href wm-nav="exercicios/links2.html">07 - Links 2</a> |
         <a href wm-nav="exercicios/tabela.html">08 - Tabelas</a> |
+        <a href wm-nav="exercicios/forms/forms.html">09 - Formulários</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
