Add a html file to display image tags and animation with javascript

--- a/javascript-course/html/index.html
+++ b/javascript-course/html/index.html
@@ -26,6 +26,7 @@
         <a href wm-nav="exercicios/links2.html">07 - Links 2</a> |
         <a href wm-nav="exercicios/tabela.html">08 - Tabelas</a> |
         <a href wm-nav="exercicios/forms/forms.html">09 - Formulários</a> |
+        <a href wm-nav="exercicios/imagens.html">10 - Imagens</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
