aprendendo sobre tags de videos

--- a/javascript-course/html/index.html
+++ b/javascript-course/html/index.html
@@ -27,6 +27,7 @@
         <a href wm-nav="exercicios/tabela.html">08 - Tabelas</a> |
         <a href wm-nav="exercicios/forms/forms.html">09 - Formulários</a> |
         <a href wm-nav="exercicios/imagens.html">10 - Imagens</a> |
+        <a href wm-nav="exercicios/video.html">11 - Videos</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
