--- a/javascript-course/html/exercicios/imagens.html
+++ b/javascript-course/html/exercicios/imagens.html
@@ -60,10 +60,37 @@
         }
     }
 
-    const p = document.querySelector('[vm-slider] > p')
-    p.style.display = 'block'
+    // const p = document.querySelector('[vm-slider] > p')
+    // p.style.display = 'block'
 
-    mover(p, 1500, -520, 5, () => {
-        console.log('Terminou!!!')
-    })
+    // mover(p, 1500, -520, 5, () => {
+    //     console.log('Terminou!!!')
+    // })
+
+    function slider() {
+        const elementos = document.querySelectorAll('[vm-slider] > p')
+        const slides = Array.from(elementos)
+        exibirSlide(slides, slides[0])
+    }
+
+    function exibirSlide(slides, slide) {
+        slide.style.display = 'block'
+
+        const inicio = innerWidth
+        const fim = slide.clientWidth
+
+        slide.style.left = `${inicio}px`
+
+        mover(slide, inicio, fim, 5, () => {
+            slide.style.display = 'none'
+            exibirSlide(slides, getProximo(slides, slide))
+        })
+    }
+
+    function getProximo(lista, atual) {
+        const i = lista.index(atual) + 1
+        return i < lista.length ? lista[i] : lista[0]
+    }
+
+    slider()
 </script>
