aprendendo sobre tags não visuais

--- a/javascript-course/html/index.html
+++ b/javascript-course/html/index.html
@@ -28,6 +28,7 @@
         <a href wm-nav="exercicios/forms/forms.html">09 - Formulários</a> |
         <a href wm-nav="exercicios/imagens.html">10 - Imagens</a> |
         <a href wm-nav="exercicios/video.html">11 - Videos</a> |
+        <a href wm-nav="exercicios/tagsNaoVisuais.html">11 - Tags Não Visuais</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
